always force a y-scrollbar to prevent layout jumps

--- a/kolibri/core/assets/src/core-global.styl
+++ b/kolibri/core/assets/src/core-global.styl
@@ -23,6 +23,7 @@ html
   // https://davidwalsh.name/html5-boilerplate
   font-size: 100%
   text-size-adjust: 100%
+  overflow-y: scroll
 
 
 html, body
